# learning_rust

./: Cargo.toml  README.md
.cargo/: config.toml
scripts/: init_db.sh
src/: configurations.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
