[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.11"
actix-web = "4.4.1"
reqwest = "0.11"
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features =[
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


