[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.11"
actix-web = "4.4.1"
reqwest = "0.11"
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
chrono = "0.4.15"
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features =[
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


